# mavryk-rust

./: .drone.longrunning.yml  .drone.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.debug.yml  docker-compose.storage.irmin.yml  docker-compose.storage.memory.yml  docker-compose.storage.persistent.yml  docker-compose.yml  run.sh  run_mem_env.sh  test.sh
mavryk-encoding/: Cargo.toml  README.md
mavryk-encoding-derive/: Cargo.toml  README.md
mavryk-encoding-derive/src/: bin.rs  enc.rs  encoding.rs  lib.rs  make.rs  nom.rs  symbol.rs
mavryk-encoding/src/: binary_writer.rs  enc.rs  encoding.rs  lib.rs  nom.rs  types.rs
mavryk/conv/: Cargo.toml
mavryk/conv/src/: from_ocaml.rs  lib.rs  to_ocaml.rs
mavryk/interop/: Cargo.toml  README.md
mavryk/interop/benches/: bench_apply_first_three_blocks.rs  bench_ocaml.rs  interop_benchmark.rs
mavryk/interop/src/: ipc_message_encoding.rs  lib.rs
mavryk/interop/tests/: bootstrap_storage_protocol_v1_test.rs  bootstrap_storage_protocol_v4_test.rs  bootstrap_storage_test.rs  decode_context_data_test.rs  ffi_rpc_router_test.rs  ffi_tests.rs  init_storage_tests.rs  integrity_check.rs  prevalidator_mempool_protocol_v1_test.rs  prevalidator_mempool_protocol_v4.rs  prevalidator_mempool_test.rs  runtime_call_ocaml_tests.rs  test_bytes_roundtrips.rs  test_rust_ocaml_conv.rs
mavryk/interop/tests/common/: mod.rs
mavryk/protocol-ipc-messages/: Cargo.toml
mavryk/protocol-ipc-messages/src/: lib.rs
mavryk/timing/: Cargo.toml
mavryk/timing/src/: lib.rs
shell/: Cargo.toml
shell/src/: shell_automaton_manager.rs
shell/src/stats/: apply_block_stats.rs
shell/src/validation/: mod.rs
shell_automaton/: Cargo.toml
shell_automaton/src/: config.rs  shell_compatibility_version.rs  state.rs
shell_automaton/src/baker/: README.md  baker_state.rs  mod.rs
shell_automaton/src/baker/block_baker/: baker_block_baker_actions.rs  baker_block_baker_effects.rs  baker_block_baker_reducer.rs  baker_block_baker_state.rs
shell_automaton/src/baker/block_endorser/: baker_block_endorser_actions.rs  baker_block_endorser_effects.rs  baker_block_endorser_reducer.rs  baker_block_endorser_state.rs
shell_automaton/src/baker/persisted/: baker_persisted_state.rs
shell_automaton/src/baker/persisted/persist/: baker_persisted_persist_actions.rs
shell_automaton/src/baker/persisted/rehydrate/: baker_persisted_rehydrate_actions.rs
shell_automaton/src/baker/seed_nonce/: baker_seed_nonce_actions.rs  baker_seed_nonce_effects.rs  baker_seed_nonce_state.rs
shell_automaton/src/block_applier/: block_applier_actions.rs  block_applier_state.rs
shell_automaton/src/bootstrap/: bootstrap_actions.rs  bootstrap_effects.rs  bootstrap_reducer.rs  bootstrap_state.rs
shell_automaton/src/current_head/: current_head_actions.rs  current_head_effects.rs  current_head_reducer.rs  current_head_state.rs
shell_automaton/src/current_head_precheck/: current_head_precheck_actions.rs  current_head_precheck_effects.rs  current_head_precheck_reducer.rs  current_head_precheck_state.rs
shell_automaton/src/logger/: logger_effects.rs
shell_automaton/src/mempool/: mempool_actions.rs  mempool_effects.rs  mempool_reducer.rs  mempool_state.rs  monitored_operation.rs
shell_automaton/src/mempool/validator/: mempool_validator_actions.rs  mempool_validator_effects.rs  mempool_validator_state.rs
shell_automaton/src/peer/: peer_crypto.rs  peer_effects.rs  peer_state.rs
shell_automaton/src/peer/binary_message/read/: peer_binary_message_read_effects.rs  peer_binary_message_read_state.rs
shell_automaton/src/peer/binary_message/write/: peer_binary_message_write_reducer.rs
shell_automaton/src/peer/chunk/read/: peer_chunk_read_reducer.rs
shell_automaton/src/peer/chunk/write/: peer_chunk_write_actions.rs  peer_chunk_write_effects.rs  peer_chunk_write_state.rs
shell_automaton/src/peer/handshaking/: peer_handshaking_actions.rs  peer_handshaking_effects.rs  peer_handshaking_reducer.rs  peer_handshaking_state.rs
shell_automaton/src/peers/graylist/: peers_graylist_actions.rs
shell_automaton/src/prechecker/: operation_contents.rs  prechecker_actions.rs  prechecker_effects.rs  prechecker_reducer.rs  prechecker_state.rs  prechecker_utils.rs  prechecker_validator.rs
shell_automaton/src/protocol_runner/: protocol_runner_actions.rs  protocol_runner_effects.rs
shell_automaton/src/protocol_runner/init/: protocol_runner_init_state.rs
shell_automaton/src/protocol_runner/latest_context_hashes/: protocol_runner_latest_context_hashes_actions.rs  protocol_runner_latest_context_hashes_state.rs
shell_automaton/src/protocol_runner/spawn_server/: protocol_runner_spawn_server_actions.rs  protocol_runner_spawn_server_state.rs
shell_automaton/src/rights/: mod.rs  rights_actions.rs  rights_effects.rs  rights_state.rs  utils.rs
shell_automaton/src/rights/cycle_delegates/: rights_cycle_delegates_actions.rs  rights_cycle_delegates_effects.rs  rights_cycle_delegates_state.rs
shell_automaton/src/rights/cycle_eras/: mod.rs  rights_cycle_eras_actions.rs  rights_cycle_eras_effects.rs  rights_cycle_eras_state.rs
shell_automaton/src/rpc/: rpc_effects.rs  rpc_reducer.rs  rpc_state.rs
shell_automaton/src/service/: actors_service.rs  baker_service.rs  protocol_runner_service.rs  protocol_runner_service_worker.rs  randomness_service.rs  rpc_service.rs  storage_service.rs
shell_automaton/src/service/statistics_service/: mod.rs
shell_automaton/src/stats/current_head/: stats_current_head_actions.rs  stats_current_head_effects.rs
shell_automaton/src/storage/: mod.rs
shell_automaton/src/storage/request/: storage_request_state.rs
shell_automaton/testing/: Cargo.toml
shell_automaton/testing/src/: lib.rs
shell_automaton/testing/src/one_real_node_cluster/: cluster.rs
shell_automaton/testing/src/service/: baker_service.rs  protocol_runner_service.rs  randomness_service.rs  storage_service.rs
shell_automaton/testing/tests/: test_handshaking_basic.rs
shell_automaton/testing/tests/bootstrap/: test_fork.rs
shell_automaton/testing/tests/p2p_requests/: test_get_current_branch.rs
(+366 files in other folders)
