cargo-features = ["named-profiles"]

[workspace]
members = [
    "ipc",
    "async-ipc",
    "logging",
    "crypto",
    "mavryk/sys",
    "mavryk/api",
    "mavryk/conv",
    "mavryk/messages",
    "mavryk/identity",
    "mavryk/interop",
    "mavryk/encoding",
    "mavryk/encoding-derive",
    "mavryk/context",
    "mavryk/context-api",
    "mavryk/context-ipc-client",
    "mavryk/context-tool",
    "mavryk/protocol-ipc-client",
    "mavryk/protocol-ipc-messages",
    "mavryk/spsc",
    "mavryk/timing",
    "mavryk/lib_storage_ffi",
    "networking",
    "shell",
    "shell-integration",
    "shell_automaton",
    "shell_automaton/testing",
    "storage",
    "sandbox",
    "light_node",
    "monitoring",
    "protocol_runner",
    "rpc",
    "edgekv",
    "edgekv/db-checker",
    "fuzz/ack_message",
    "fuzz/advertise_message",
    "fuzz/block_header_message",
    "fuzz/current_branch_message",
    "fuzz/current_head_message",
    "fuzz/connection_message",
    "fuzz/metadata_message",
    "fuzz/operation_message",
    "fuzz/operations_for_blocks_message",
    "fuzz/peer_response_message",
    "fuzz/protocol_message",
    "apps/baker",
    "apps/tenderbake",
]

[patch.crates-io]
ocaml-boxroot-sys = { git = "https://gitlab.com/bruno.deferrari/ocaml-boxroot.git", branch = "ocaml-410-headers" }
librocksdb-sys = { git = "https://github.com/tezedge/rust-rocksdb.git", tag = "tezedge-v2.3.0" }

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1
