[package]
name = "mavryk_data_encoding_derive"
version = "0.5.2"
authors = [
    "TriliTech <contact@trili.tech>",
    "Mavryk Dynamics <info@mavryk.io>"
]
edition = "2021"
rust-version = "1.60"
license = "MIT"
keywords = ["mavryk"]
categories = ["encoding"]
description = "Procedural macros for mavryk_encoding."
repository = "https://github.com/mavryk-network/mavryk-rust.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"]}
quote = "1.0"
lazy_static = "1.4.0"
parse-display = "0.4.1"
once_cell = "1.9.0"

[features]
fuzzing = []
