[package]
name = "mavryk_data_encoding"
version = "0.5.2"
authors = ["TriliTech <contact@trili.tech>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
keywords = ["tezos"]
categories = ["encoding"]
description = "Utilities for encoding/decoding data compatible with tezos data encoding."
repository = "https://github.com/trilitech/tezedge.git"

[dependencies]
bit-vec = "0.6.2"
thiserror = "1.0"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"
bitvec = "1.0"
lazy_static = "1.4"

[dependencies.mavryk_crypto_rs]
path = "../crypto"
version = "0.5.2"
default-features = false

[dependencies.mavryk_data_encoding_derive]
path = "../mavryk-encoding-derive"
version = "0.5.2"

[dev-dependencies]
serde_json = "1.0"

[features]
