[package]
name = "shell"
version = "3.1.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
async_ipc = { path = "../async-ipc" }
time = "0.3"
dns-lookup = "1.0.1"
thiserror = "1.0"
futures = "0.3"
getset = "0.1"
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
nix = "0.23"
page_size = "0.4.1"
rand = "0.7.3"
regex = "1.5"
tezedge-actor-system = { git = "https://github.com/tezedge/tezedge-actor-system.git", tag = "v0.5.0" }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.19", features = ["time"] }
# local dependencies
crypto = { path = "../crypto" }
networking = { path = "../networking" }
shell_automaton = { path = "../shell_automaton" }
storage = { path = "../storage" }
mavryk_api = { path = "../mavryk/api" }
mavryk_identity = { path = "../mavryk/identity" }
mavryk_messages = { path = "../mavryk/messages" }
mavryk_protocol_ipc_client = { path = "../mavryk/protocol-ipc-client" }

[dev-dependencies]
serial_test = "0.5"
slog-async = "2.6"
slog-term = "2.9"
fs_extra = "1.2.0"
zip = { git = "https://github.com/zip-rs/zip.git", rev = "2009d162fbaf162190e6495e211cebfe6cd98a96" }
tokio = { version = "1.19", features = ["sync"] }
nom = "6.1"
mavryk_encoding = { path = "../mavryk/encoding" }
# TODO: TE-224 - this is not used directly, but test which using PROTOCOL_RUNNER fails without that (mavryk_interop can be also replaced with mavryk_client, and still works)
mavryk_context_api = { path = "../mavryk/context-api" }
