[package]
name = "mavryk_interop"
version = "3.1.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
thiserror = "1.0"
futures = { version = "0.3", features = ["thread-pool"] }
hex = "0.4"
lazy_static = "1.4"
ocaml-interop = { version = "0.8.7", features = ["without-ocamlopt", "caml-state"] }
serde_json = "1.0"
# local dependencies
mavryk-sys = { path = "../sys" }
mavryk_api = { path = "../api" }
mavryk_conv = { path = "../conv" }
mavryk_messages = { path = "../messages" }
mavryk_context = { path = "../context" }
mavryk_context_api = { path = "../context-api" }
mavryk_protocol_ipc_messages = { path = "../protocol-ipc-messages" }
crypto = { path = "../../crypto" }

[dev-dependencies]
crypto = { path = "../../crypto" }
mavryk_interop = { path = "../interop" }
serial_test = "0.5"
criterion = "0.3"
bencher = "0.1.5"
anyhow = "1.0"
assert-json-diff = "2"
strum = "0.20"
thiserror = "1.0"
hex = "0.4"
serde_json = "1.0"
slog-async = "2.6"
slog-term = "2.9"

[[bench]]
name = "interop_benchmark"
harness = false

[[bench]]
name = "bench_ocaml"
harness = false

[[bench]]
name = "bench_apply_first_three_blocks"
harness = false

[features]
fuzzing = []
