[package]
name = "mavryk_protocol_ipc_messages"
version = "3.1.1"
authors = ["Bruno Deferrari <bruno.deferrari@viablesystems.io>"]
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.20"
enum-kinds = "0.5.1"
fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

# local dependencies
crypto = { path = "../../crypto" }
mavryk_context_api = { path = "../context-api" }
mavryk_api = { path = "../api" }
mavryk_messages = { path = "../messages" }

[features]
fuzzing = [
    "fuzzcheck",
    "crypto/fuzzing",
    "mavryk_messages/fuzzing",
    "mavryk_api/fuzzing",
    "mavryk_context_api/fuzzing"
]
