[package]
name = "shell_automaton_testing"
version = "3.1.1"
edition = "2021"
rust-version = "1.58"

[dependencies]
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
slab = { version = "0.4.3", features = ["serde"] }

shell_automaton = { path = "../" }
crypto = { path = "../../crypto" }
storage = { path = "../../storage" }
networking = { path = "../../networking" }
mavryk_encoding = { path = "../../mavryk/encoding" }
mavryk_identity = { path = "../../mavryk/identity" }
mavryk_messages = { path = "../../mavryk/messages" }
mavryk_api = { path = "../../mavryk/api" }
mavryk_context_api = { path = "../../mavryk/context-api" }
mavryk_protocol_ipc_client = { path = "../../mavryk/protocol-ipc-client" }
mavryk_protocol_ipc_messages = { path = "../../mavryk/protocol-ipc-messages" }
